@@ -1,13 +1,13 @@
 package kr.co.groupworks.workflow.repository;
 
+import kr.co.groupworks.department.entity.Department;
+import kr.co.groupworks.department.repository.DepartmentRepository;
+import kr.co.groupworks.employee.entity.Employee;
+import kr.co.groupworks.employee.repository.EmployeeRepository;
 import kr.co.groupworks.workflow.control.WorkFlowController;
 import kr.co.groupworks.workflow.dto.vo.WorkflowListVO;
-import kr.co.groupworks.entity.cis.Department;
-import kr.co.groupworks.entity.cis.Employee;
 import kr.co.groupworks.workflow.entity.ApproverEntity;
 import kr.co.groupworks.workflow.entity.WorkFlowEntity;
-import kr.co.groupworks.repository.cis.DepartmentRepository;
-import kr.co.groupworks.repository.cis.EmployeeRepository;
 import lombok.extern.slf4j.Slf4j;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
@@ -22,6 +22,7 @@ import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.*;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -69,11 +70,11 @@ class WorkFlowRepositoryTest {
                 .phoneNumber("010-1111-111" + (i % 10)) // phoneNumber: 사원 전화번호 (010-1111-1110, 010-1111-1111, ..., 010-1111-1119 반복)
                 .address("주소 " + i) // address: 사원 주소 (주소 1, 주소 2, ..., 주소 100)
                 .gender((i % 2 == 0) ? "남" : "여") // gender: 사원 성별 (남 또는 여, 홀수는 여, 짝수는 남)
-                .joinDate(LocalDateTime.now().minusDays(i)) // joinDate: 입사일 (현재 날짜에서 i일 전)
+                .createdDate(LocalDateTime.now().minusDays(i)) // joinDate: 입사일 (현재 날짜에서 i일 전)
                 .salary((3000L + i) * 10L) // salary: 사원 급여 (3000부터 시작, i에 따라 증가)
                 .supervisorId(i > 10 ? (long) ((i % 10) + 1) : 0) // supervisorId: 상사 ID (1부터 10까지 반복)
                 .build()
-        ).toList();
+        ).collect(Collectors.toList());
         // 출력 (테스트용)
         employeeRepository.saveAll(employees).forEach(employee ->
                 log.info("{}: {}, {}, {}, {}",
@@ -257,6 +258,17 @@ class WorkFlowRepositoryTest {
         });
         resMap.forEach((k, v) -> log.info("{}: {}", k, v));
         log.info(stopWatch.prettyPrint());
+    }
+
+    @Test @DisplayName("EmployeeWorkflowStat")
+    public void employeeWorkflowStatTest() {
+        StopWatch stopWatch = new StopWatch();
+        stopWatch.start();
+        List<WorkFlowEntity> workFlowEntityList =
+                workFlowRepository.employeeWorkflowStat(3, 3L);
+        stopWatch.stop();
+        log.info(stopWatch.prettyPrint());
+        log.info("length: {}", workFlowEntityList.size());
     }
 
 }
