@@ -1,11 +1,12 @@
 package kr.co.groupworks.workflow.service;
 
+import kr.co.groupworks.department.entity.Department;
+import kr.co.groupworks.department.repository.DepartmentRepository;
+import kr.co.groupworks.employee.entity.Employee;
+import kr.co.groupworks.employee.repository.EmployeeRepository;
 import kr.co.groupworks.workflow.dto.dto.ApproverDTO;
+import kr.co.groupworks.workflow.dto.dto.OpenWorkflowVO;
 import kr.co.groupworks.workflow.dto.employee.EmployeeDTO;
-import kr.co.groupworks.entity.cis.Department;
-import kr.co.groupworks.entity.cis.Employee;
-import kr.co.groupworks.repository.cis.DepartmentRepository;
-import kr.co.groupworks.repository.cis.EmployeeRepository;
 import lombok.extern.slf4j.Slf4j;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -22,6 +23,7 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -115,11 +117,11 @@ class WorkFlowServiceImplTest {
                 .phoneNumber("010-1111-111" + (i % 10)) // phoneNumber: 사원 전화번호 (010-1111-1110, 010-1111-1111, ..., 010-1111-1119 반복)
                 .address("주소 " + i) // address: 사원 주소 (주소 1, 주소 2, ..., 주소 100)
                 .gender((i % 2 == 0) ? "남" : "여") // gender: 사원 성별 (남 또는 여, 홀수는 여, 짝수는 남)
-                .joinDate(LocalDateTime.now().minusDays(i)) // joinDate: 입사일 (현재 날짜에서 i일 전)
+                .createdDate(LocalDateTime.now().minusDays(i)) // joinDate: 입사일 (현재 날짜에서 i일 전)
                 .salary((3000L + i) * 10L) // salary: 사원 급여 (3000부터 시작, i에 따라 증가)
                 .supervisorId(i > 10 ? (long) ((i % 10) + 1) : 0) // supervisorId: 상사 ID (1부터 10까지 반복)
                 .build()
-        ).toList());
+        ).collect(Collectors.toList()));
 
         // 생성된 사원데이터 확인
         employees.forEach(employee ->
@@ -206,4 +208,25 @@ class WorkFlowServiceImplTest {
         log.info(stopWatch.prettyPrint());
         log.info("res: {}", res.toString());
     }
+
+    @Test @DisplayName("GetEmployeeWorkflowStat Test")
+    public void getEmployeeWorkflowStatTest() {
+        StopWatch stopWatch = new StopWatch();
+        stopWatch.start();
+        Object results = workFlowService.getEmployeeWorkflowStat(3, 3L);
+        stopWatch.stop();
+        log.info(stopWatch.prettyPrint());
+        log.info("length: {}", ((List<OpenWorkflowVO>) results).size());
+    }
+
+    @Test @DisplayName("GetOpenWorkflowId Test")
+    public void getOpenWorkflowId() {
+        StopWatch stopWatch = new StopWatch();
+        stopWatch.start();
+        OpenWorkflowVO vo = workFlowService.getOpenWorkflow(1L);
+        stopWatch.stop();
+        log.info(stopWatch.prettyPrint());
+        log.info(vo.toString());
+    }
+
 }
